src/objects/CXE_PortalDeactivation_Reason__mdt.object
<CustomObject>
    <description>This will receive as  the criteria for  which reasons thus the user have chosen to deactivate the portal account.</description>
    <fields>
        <fullName>Different_Email__c</fullName>
        <description>1.	I want to use a different email address as my username.</description>
        <label>Different_Email</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_Out_Address__c</fullName>
        <description>2. I’m going to move out of my current address.</description>
        <label>Move_Out_Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Active_Sin__c</fullName>
        <description>4.I don’t have an active SIN anymore</description>
        <label>No_Active_Sin</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Longer_Use__c</fullName>
        <description>9.I no longer use my customer portal account.</description>
        <label>No_Longer_Use</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Difficult__c</fullName>
        <description>6. Meralco Online is difficult to use</description>
        <label>Portal_Difficult</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Unuseful__c</fullName>
        <description>5.I didn’t find Meralco Online useful.</description>
        <label>Portal_Unuseful</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Concerns__c</fullName>
        <description>8.I have privacy concerns</description>
        <label>Privacy_Concerns</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_Many_Emails__c</fullName>
        <description>7 received too many e-mails/notifications/promotions</description>
        <label>Received_Many_Emails</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegCustmer_Not_Assctd__c</fullName>
        <description>3.I’m not associated with the Registered Customer anymore</description>
        <label>RegCustmer_Not_Assctd</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>CXE_PortalDeactivation_Reason</label>
    <pluralLabel>CXE_PortalDeactivation_Reasons</pluralLabel>
</CustomObject>